Unreal Engine 4.15 Support
Added support for UE 4.15.
Removed reference to website on startup as website no longer available

--- a/DialogueSystem.uplugin
+++ b/DialogueSystem.uplugin
@@ -21,8 +21,8 @@
       "Type" : "Editor"
 	}
 	],
-	"EnabledByDefault": false,
+	"EnabledByDefault": true,
 	"CanContainContent": false,
 	"IsBetaVersion": false,
-	"Installed": false
+	"Installed": true
 }
